Trait reponse API
